fixed alignment of footer

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ header{
 bodysection{
     width:100vw;
     margin: 0;
+    padding-bottom: 5%;
     
 }
 
@@ -135,7 +136,6 @@ header h2{
     top: 40%;
     left: 5rem;
     margin-bottom: 1rem;
-
 }
 
 .heroTxt h1{
@@ -410,7 +410,13 @@ footer{
     display: flex;
     text-align: center;
     vertical-align: middle;
-    top: 0;
-    left: 0;
+   
+ 
     
+}
+
+footer div{
+
+    margin-left: 50%;
+
 }
